@@ -1,6 +1,7 @@
 47
 ================
 
+13/04/23 reinstall_default_data only needs to clear lookup tables
 11/04/23 Re-implementation of mobile photo uploader #1249
 10/04/23 Add Warning/OwnerWarning wordkeys to access warning content
 07/04/23 Fix email templates when emailing ACO from incident
